samples/_failures_safe/1761155336_555581_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4ae493fb.c: In function ‘tokenize’:
./samples/SAFE/__tmp_4ae493fb.c:173:12: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  173 |     return token
      |            ^~~~~
      |            Token
./samples/SAFE/__tmp_4ae493fb.c:173:12: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_4ae493fb.c:173:17: error: expected ‘;’ at end of input
  173 |     return token
      |                 ^
      |                 ;
./samples/SAFE/__tmp_4ae493fb.c:173:5: error: expected declaration or statement at end of input
  173 |     return token
      |     ^~~~~~
